--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -36,7 +36,7 @@
                 <select class="form-control columnType" data-bind="options: columnTypes(), value: columnType"></select>
               </td>
               <td>
-                <a href="#" class="btn btn-default" onclick="return false;" data-bind="click: removeSelected"><i class="fa fa-trash"></i></a>
+                <a href="#" class="btn btn-default" onclick="return false;" data-bind="click: removeSelectedColumn"><i class="fa fa-trash"></i></a>
               </td>
             </tr>
           </tbody>
