tried to compute the total sum of time entries...works at least...not correct ;)

--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -37,6 +37,9 @@
           </tbody>
         </table>
         <div class="clearfix">
+          @Messages("sum"): <span id="sum" data-bind="text: sum"></span>
+        </div>
+        <div class="clearfix">
           <a class="btn btn-default pull-right" id="newEntry" href="#" onclick="return false;">@Messages("entry.new")</a>
         </div>
         <hr/>
